<resources>
    <string name="app_name">QLSach</string>
    <string name="login_hint_enter_username">Username</string>
    <string name="login_hint_enter_password">Password</string>
    <string name="login_checkbox">Lưu mật khẩu</string>
    <string name="login_btn_login">Đăng nhập</string>
    <string name="login_forgotpass">Quên mật khẩu?</string>
    <string name="login_or">Hoặc</string>
    <string name="login_btn_Signup">Tạo tài khoản mới</string>
    <string name="forgotpass_phonenumber">Số điện thoại đăng ký</string>
    <string name="forgotpas_newPassword">Nhập mật khẩu mới</string>
    <string name="forgotpass_confirmPassword">Xác nhận mật khẩu</string>
    <string name="forgotpass_savePass">Lưu mật khẩu</string>
    <string name="forgotpass_back">Quay lại</string>
    <string name="login_hint_enter_confirmpassword">Confirm Password</string>
    <string name="Signup_btnSignup">Đăng ký</string>
    <string name="menu_title_QLnguoidung">Quản lý người dùng</string>
    <string name="menu_title_QLtheloai">Quản lý thể loại Sách</string>
    <string name="menu_title_QLsach">Quản lý Sách</string>
    <string name="menu_title_QLhoadon">Quản lý hóa đơn</string>
    <string name="menu_title_Thongke">Thống kê</string>
    <string name="menu_title_Sachbanchay">Sách bán chạy</string>
    <string name="menu_title_Dangxuat">Đăng xuất</string>
    <string name="dauhaicham">:</string>
    <string name="TLSach_titleMaTL">Mã</string>
    <string name="TLSach_titleTenTL">Tên</string>
    <string name="inforUser_hint_enter_name">Name</string>
    <string name="inforUser_hint_enter_username">Username</string>
    <string name="inforUser_hint_enter_password">Password</string>
    <string name="inforUser_hint_enter_phone">Phone number</string>
    <string name="inforUser_hint_enter_address">Address</string>
    <string name="add_Name_hint_enter_Name">Vui lòng nhập tên (Có dấu)</string>
    <string name="add_Username_hint_enter_Name">Nhập tên đăng nhập ( ít nhất 6 ký tự, không chứa dấu )</string>
    <string name="add_Password_hint_enter_pass">Password</string>
    <string name="add_Password_hint_enter_cfpass">Confirm Password</string>
    <string name="add_Phone_hint_enter_phone">Vui lòng nhập chính xác số điện thoại</string>
    <string name="add_Address_hint_enter_address">Vui lòng nhập địa chỉ rõ ràng</string>
    <string name="inforTL_hint_enter_maTL">Mã thể loại</string>
    <string name="inforTL_hint_enter_tenTL">Tên thể loại</string>
    <string name="inforTL_hint_enter_vitriTL">Vị trí</string>
    <string name="inforTL_hint_enter_motaTL">Mô tả</string>
    <string name="add_maTL_hint_enter_maTL">Nhập mã thể loại Sách</string>
    <string name="add_tenTL_hint_enter_tenTL">Nhập tên thể loại Sách</string>
    <string name="add_vitriTLL_hint_enter_vitriTL">Nhập vị trí thể loại Sách</string>
    <string name="add_motaTL_hint_enter_motaTL">Nhập mô tả thể loại Sách</string>
    <string name="VND">VNĐ</string>
    <string name="quyen">quyển</string>
    <string name="inforBook_hint_enter_maSach">Mã sách</string>
    <string name="inforBook_hint_enter_tenSach">Tên sách</string>
    <string name="inforBook_hint_enter_tacGia">Tác giả</string>
    <string name="inforBook_hint_enter_nxb">NXB</string>
    <string name="inforBook_hint_enter_soLuong">Số lượng</string>
    <string name="inforBook_hint_enter_gia">Giá bìa</string>
    <string name="add_Sach_hint_enter_maSach">Nhập mã Sách</string>
    <string name="add_Sach_hint_enter_maTLSach">Chọn mã thể loại Sách</string>
    <string name="add_Sach_hint_enter_tenSach">Nhập tên Sách</string>
    <string name="add_Sach_hint_enter_tacGia">Nhập tác giả</string>
    <string name="add_Sach_hint_enter_nxbSach">Nhập NXB Sách</string>
    <string name="add_Sach_hint_enter_soluongSach">Nhập số lượng Sách</string>
    <string name="add_Sach_hint_enter_giaSach">Nhập giá Sách</string>
    <string name="addHDCT">Thêm hóa đơn chi tiết</string>
    <string name="HoaDon_title_Date">Ngày mua</string>
    <string name="inforHD_hint_enter_maHD">Mã hóa đơn</string>
    <string name="inforHD_hint_enter_tvDate">Ngày mua</string>
    <string name="add_maHD_hint_enter_maHD">Nhập mã hóa đơn</string>
    <string name="add_HDCT_hint_enter_maHDCT">Nhập mã hóa đơn chi tiết</string>
    <string name="inforBook_maTLSach">Mã thể loại Sách</string>
    <string name="add_Sach_hint_maTLSach">Chọn mã thể loại Sách</string>
    <string name="add_HDCT_hint_maHD">Chọn mã hóa đơn</string>
    <string name="add_HDCT_hint_maSach">Chọn mã Sách</string>
    <string name="add_HDCT_hint_enter_soluong">Nhập số lượng</string>
    <string name="inforHDCT_hint_enter_maHDCT">Mã hóa đơn chi tiết</string>
    <string name="HDCT_thanhtien">Thành tiền :</string>
    <string name="SachBanChay_title">Top Sách bán chạy</string>
    <string name="HDCT_title_count">Số lượng</string>
    <string name="maHDCT_title">Mã</string>
    <string name="inforHDT_maHD">Mã hóa đơn</string>
    <string name="inforHDCT_hint_enter_soluong">Số lượng</string>
    <string name="SachBanChay_sumsl">Tổng số lượng</string>
</resources>
