<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginRight="16dp"
    tools:context=".Sach.ThongTinSachActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgEdit_maSach"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:src="@drawable/edit_icon" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_maSach"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/imgEdit_maSach"
                app:counterEnabled="true"
                app:counterMaxLength="100">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_maSach"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/inforBook_hint_enter_maSach" />

            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inforBook_maTLSach"/>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spnmaTL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgEdit_tenSach"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:src="@drawable/edit_icon" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_tenSach"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/imgEdit_tenSach"
                app:counterEnabled="true"
                app:counterMaxLength="100">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_tenSach"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/inforBook_hint_enter_tenSach" />

            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgEdit_tacGia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:src="@drawable/edit_icon" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_tacGia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/imgEdit_tacGia"
                app:counterEnabled="true"
                app:counterMaxLength="100">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_tacGia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/inforBook_hint_enter_tacGia" />

            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgEdit_nxb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:src="@drawable/edit_icon" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_nxb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/imgEdit_nxb"
                app:counterEnabled="true"
                app:counterMaxLength="100">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_nxb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/inforBook_hint_enter_nxb" />

            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgEdit_soLuong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:src="@drawable/edit_icon" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_soLuong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/imgEdit_soLuong"
                app:counterEnabled="true"
                app:counterMaxLength="100">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_soLuong"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/inforBook_hint_enter_soLuong" />

            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgEdit_gia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:src="@drawable/edit_icon" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_gia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/imgEdit_gia"
                app:counterEnabled="true"
                app:counterMaxLength="100">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_gia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/inforBook_hint_enter_gia" />

            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>

    </LinearLayout>
</ScrollView>