<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginRight="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgEdit_maHDCT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:src="@drawable/edit_icon" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_maHDCT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/imgEdit_maHDCT"
                app:counterEnabled="true"
                app:counterMaxLength="100">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_maHDCT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/inforHDCT_hint_enter_maHDCT" />

            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>

        <TextView
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inforBook_maTLSach"/>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spnmaTL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inforBook_hint_enter_maSach"/>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spnmaSach"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgEdit_soLuong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:src="@drawable/edit_icon" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_soLuong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/imgEdit_soLuong"
                app:counterEnabled="true"
                app:counterMaxLength="100">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_soLuong"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/inforHDCT_hint_enter_maHDCT" />
            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>
        <LinearLayout
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/HDCT_thanhtien"
                android:textColor="@color/colorPrimary"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:textColor="@color/colorPrimary"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>